--- a/config.json
+++ b/config.json
@@ -2,10 +2,8 @@
   "ticketCategoryId": "1432728070254497793",
   "logChannelId": "",
   "setupChannelId": "",
-  "prizeJasaChannelId": "1432728210235195412",
+  "priceJasaChannelId": "1432728210235195412",
   "priceLockChannelId": "1432728847496777728",
-  "staffRoles": [
-    "1433507603123540008"
-  ],
+  "staffRoles": ["1433507603123540008"],
   "archiveChannelId": "1437578501778702417"
 }
