--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "setupChannelId": "",
   "priceJasaChannelId": "1432728210235195412",
   "priceLockChannelId": "1432728847496777728",
-  "staffRoles": ["1433507603123540008"],
+  "staffRoles": ["1433507603123540008"],     
+  "adminRoles": ["1432735629543735368"],     
   "archiveChannelId": "1437578501778702417"
 }
