--- a/config.json
+++ b/config.json
@@ -4,7 +4,11 @@
   "setupChannelId": "",
   "priceJasaChannelId": "1432728210235195412",
   "priceLockChannelId": "1432728847496777728",
-  "staffRoles": ["1433507603123540008"],     
-  "adminRoles": ["1432735629543735368"],     
-  "archiveChannelId": "1437578501778702417"
+  "staffRoles": ["1433507603123540008"],
+  "adminRoles": ["1432735629543735368"],
+  "archiveChannelId": "1437578501778702417",
+  "welcomeChannel": "",           
+  "welcomeBackground": null,
+  "goodbyeChannel": "",           
+  "goodbyeBackground": null
 }
