--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
   "staffRoles": ["1433507603123540008"],
   "adminRoles": ["1432735629543735368"],
   "archiveChannelId": "1437578501778702417",
-  "welcomeChannel": "",           
+  "welcomeChannel": "1442202358099476480",           
   "welcomeBackground": null,
-  "goodbyeChannel": "",           
+  "goodbyeChannel": "1442202440739848255",           
   "goodbyeBackground": null
 }
