--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "14.16.3",
-    "express": "^5.1.0", 
+    "express": "^5.1.0" 
   }
 }
